# gaming-analytics-pipeline

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.marimo  LICENSE  Makefile  README.md  compose.yaml  main.py  pyproject.toml  sqlmesh.yaml
.github/workflows/: ci.yml
dashboard/: gaming_analytics.py
docs/: data-flow.md  data-lineage.md  data-retention.md
docs/adr/: 001-choose-duckdb-over-postgresql.md  002-choose-prefect-over-airflow.md  003-choose-sqlmesh-over-dbt.md
docs/images/: README.md
evidence/: evidence.yaml
evidence/pages/: games.md  genres.md  index.md
evidence/sources/: duckdb.yaml
scripts/: __init__.py  seed_data.py  seed_sample_data.py
src/gaming_pipeline/: __init__.py  logging_config.py  py.typed
src/gaming_pipeline/config/: __init__.py  settings.py
src/gaming_pipeline/extract/: __init__.py  base.py  rawg.py
src/gaming_pipeline/load/: __init__.py  pipeline.py
src/gaming_pipeline/orchestrate/: __init__.py  flows.py  tasks.py
src/gaming_pipeline/quality/: __init__.py  checks.py  configuration.py  configuration.yml
src/gaming_pipeline/quality/checks/: marts.yml  staging.yml
src/gaming_pipeline/transform/marts/: games.sql  genres.sql  platforms.sql
src/gaming_pipeline/transform/staging/: stg_games.sql  stg_genres.sql  stg_platforms.sql
tests/: conftest.py  test_extract.py  test_load.py  test_orchestrate.py  test_transform.py
tests/sqlmesh/: README.md  test_engagement_score_positive.sql  test_no_null_game_names.sql  test_rating_ranges.sql
